<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/common_bg_dialog"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/clean_space_finish"
        android:textColor="#c1c1c1"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_clean_finish_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/not_used_apk"
        android:textColor="#c1c1c1"
        android:textSize="16sp" />

    <com.winhearts.arappmarket.view.HorizontalLayout
        android:id="@+id/hl_clean_finish_uninstall_content"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_clean_finish_uninstall"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:background="@drawable/myapp_top_menu_selector"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/uninstall_my_app"
            android:textColor="@color/white"
            android:textSize="26sp"/>
        <TextView
            android:id="@+id/tv_clean_finish_cancel"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/myapp_top_menu_selector"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="26sp" />
    </LinearLayout>
</LinearLayout>