<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.winhearts.arappmarket.view.LoadAndErrorView
        android:id="@+id/fillPageView_pay_mode_guangdian"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_pay_gd_only"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/guangdian_pay"
        android:textColor="@color/white"
        android:textSize="33sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_pay_gd_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/no_CaCard"
        android:textColor="@color/white"
        android:textSize="@dimen/comm_text_size_mini"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/ll_pay_gd_content"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@id/tv_pay_gd_only"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_paay_gd_info_null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="138dp"
                android:layout_height="138dp"
                android:src="@drawable/pay_gdinfo_query_null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="请点击下方按钮确定支付"
                android:textColor="#4cffffff" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_paay_gd_info"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="invisible">


            <TextView
                android:id="@+id/tv_pay_gd_info_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_pay_gd_info_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_pay_gd_info_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:visibility="gone" />
        </LinearLayout>


        <Button
            android:id="@+id/btn_pay_gd_confirm"
            style="@style/PayBtnEmpty"
            android:layout_above="@+id/tv_pay_gd_hint"
            android:layout_centerHorizontal="true"
            android:text="确认支付" />

        <TextView
            android:id="@+id/tv_pay_gd_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="45dp"
            android:text="@string/pay_hint"
            android:textColor="#8fffffff"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_pay_gd_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="45dp"
            android:gravity="center"
            android:text="@string/deduction_failure"
            android:textColor="#ff4e00"
            android:textSize="16sp"
            android:visibility="gone" />
    </LinearLayout>
</RelativeLayout>