<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dl_my_app_content"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.winhearts.arappmarket.view.BorderRecyclerView
        android:id="@+id/rv_my_app_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="30dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:focusable="false"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:paddingTop="25dp" />

    <ImageView
        android:id="@+id/iv_left_menu_hint"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="225dp"
        android:focusable="false"
        android:src="@drawable/left_menu_hint" />

    <TextView
        android:id="@+id/tv_left_menu_hint"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="220dp"
        android:layout_toEndOf="@id/iv_left_menu_hint"
        android:layout_toRightOf="@id/iv_left_menu_hint"
        android:background="@drawable/left_menu_pop_bg"
        android:drawableLeft="@drawable/my_app_clear_master"
        android:drawableStart="@drawable/my_app_clear_master"
        android:focusable="false"
        android:gravity="center"
        android:text="@string/hint_left_menu"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:paddingRight="60dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/hint_my_app1"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingTop="5dp"
            android:src="@drawable/menu_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/hint_my_app2"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>


    <ImageView
        android:id="@+id/iv_my_app_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:src="@drawable/down_pull"
        android:visibility="invisible" />


</RelativeLayout>
